@@ -1,5 +1,7 @@
 2018-04-13  Charlie Zender  <zender@uci.edu>
 
+	* Find non-atomic types in nco_prn_cdl_trd()
+
 	* Create vlen.cdl and enum.cdl to test non-atomic types
 
 2018-04-12  Charlie Zender  <zender@uci.edu>
